--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="search">Search</string>
     <string name="trending">Trending</string>
     <string name="see_all">See All</string>
+    <string name="latest">Latest</string>
 </resources>
